# MeowRust

./: .gitignore  Cargo.toml  LICENSE  build.sbt
legacy/: README.md
legacy/project/: Dependencies.scala
legacy/src/main/scala/plus/meow/MeowRust/grammar/: literal.scala  type.scala
legacy/src/main/scala/plus/meow/MeowRust/resolve/: common.scala
legacy/testcases/: string.txt
src/: main.rs  tests.rs
src/grammar/: attr.rs  item.rs  mod.rs  type.rs
src/main/scala/plus/meow/MeowRust/: Main.scala
src/main/scala/plus/meow/MeowRust/grammar/: common.scala  expr.scala  literal.scala  pattern.scala  stmt.scala  type.scala
src/main/scala/plus/meow/MeowRust/parser/: common.scala  expression.scala  literal.scala  parser.scala  path.scala  pattern.scala  statement.scala  type.scala
src/main/scala/plus/meow/MeowRust/resolve/: const.scala  type.scala
src/parser/: attr.rs  expr.rs  ident.rs  item.rs  literal.rs  mod.rs  path.rs  pattern.rs  stmt.rs  type.rs
src/registry/: mod.rs
src/typing/: mod.rs
testcases/: arith_expr.txt  blocked_int.txt  float.decaf  func.txt  raw_string.decaf  raw_string.txt  string.txt  type.txt  type_path.txt  typing_loop.txt
testcases/parsing/expr/: expr_chain.txt  typing_loop.txt
testcases/parsing/item/: func.txt
testcases/parsing/type/: ref.txt
