[package]
name = "meow_rust"
version = "0.1.0"
authors = ["Liu Xiaoyi <circuitcoder0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "5.0.1", features = ["regexp_macros"] }
paw = "1.0.0"
structopt = { version = "0.3.4", features = ["paw"] }
failure = "0.1.6"
im = "13.0.0"
im-rc = "13.0.0"
